# searchEngine

v1/Search_Engines/: CMakeLists.txt  TestEchoServer
v1/Search_Engines/log/: wd.log.1  wd.log.2  wd.log.3  wd.log.4  wd.log.5
v1/Search_Engines/offline/ch_dict_index/art/: stop_words_zh.txt
v1/Search_Engines/offline/ch_dict_index/conf/: Jieba.conf  chi.conf
v1/Search_Engines/offline/ch_dict_index/include/: ChiDictProducer.h  Configuration.h  SplitTool.h  SplitToolCppJieba.h
v1/Search_Engines/offline/ch_dict_index/src/: ChiDictProducer.cc  a.out  chi_index.txt
v1/Search_Engines/offline/eng_dict_index/conf/: eng.conf
v1/Search_Engines/offline/eng_dict_index/include/: Configuration.h
v1/Search_Engines/offline/eng_dict_index/src/: EngDictProducer.cpp  a.out  eng_dict.txt  eng_index.txt
v1/Search_Engines/offline/three_webfile/conf/: Jieba.conf  config.txt
v1/Search_Engines/offline/three_webfile/include/: Configuration.h  Configuration_jieba.h  DirScanner.h  FileProcessor.h  PageLib.h  PageLibPreprocessor.h  SplitToolCppJieba.h  WebPage.h
v1/Search_Engines/online/client/: TestClient  client.cc  client2.cc  client3.cc
v1/Search_Engines/online/conf/: server.conf  server.conf.save
v1/Search_Engines/online/include/: CacheManager.hh  Configuration.h  Dictionary.h  KeyRecommander.h  LRUCache.h  MyRedis.hpp  Mylogger.hpp  NonCopyable.h  WebLib.hpp  WebPage.h  WebPageQuery.hpp
v1/Search_Engines/online/src/: CacheManager.cpp  Dictionary.cpp  KeyRecommander.cpp  LRUCache.cpp  MyRedis.cpp  Mylogger.cpp  SplitToolCppJieba.cpp  WebLib.cpp  WebPageQuery.cpp
(+36 files in other folders)
